[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Theme/DefaultFont12.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Art/UI/TitleScreen.png" type="Texture" id=2]
[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -146.0
margin_right = 238.0
margin_bottom = 142.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="Play" type="Button" parent="."]
anchor_left = 0.141667
anchor_top = 0.211806
anchor_right = 0.2875
anchor_bottom = 0.333333
custom_colors/font_color_focus = Color( 0.478431, 0.211765, 0.482353, 1 )
custom_colors/font_color = Color( 0.478431, 0.211765, 0.482353, 1 )
custom_colors/font_color_hover = Color( 0.635294, 0.243137, 0.54902, 1 )
custom_colors/font_color_pressed = Color( 0.776471, 0.317647, 0.592157, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Settings" type="Button" parent="."]
anchor_left = 0.1
anchor_top = 0.388889
anchor_right = 0.3375
anchor_bottom = 0.489583
custom_colors/font_color_focus = Color( 0.478431, 0.211765, 0.482353, 1 )
custom_colors/font_color = Color( 0.478431, 0.211765, 0.482353, 1 )
custom_colors/font_color_hover = Color( 0.635294, 0.243137, 0.54902, 1 )
custom_colors/font_color_pressed = Color( 0.776471, 0.317647, 0.592157, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Album" type="Button" parent="."]
anchor_left = 0.135417
anchor_top = 0.5
anchor_right = 0.295833
anchor_bottom = 0.600694
custom_colors/font_color_focus = Color( 0.478431, 0.211765, 0.482353, 1 )
custom_colors/font_color = Color( 0.478431, 0.211765, 0.482353, 1 )
custom_colors/font_color_hover = Color( 0.635294, 0.243137, 0.54902, 1 )
custom_colors/font_color_pressed = Color( 0.776471, 0.317647, 0.592157, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Album"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Credits" type="Button" parent="."]
anchor_left = 0.1125
anchor_top = 0.611111
anchor_right = 0.320833
anchor_bottom = 0.711806
custom_colors/font_color_focus = Color( 0.478431, 0.211765, 0.482353, 1 )
custom_colors/font_color = Color( 0.478431, 0.211765, 0.482353, 1 )
custom_colors/font_color_hover = Color( 0.635294, 0.243137, 0.54902, 1 )
custom_colors/font_color_pressed = Color( 0.776471, 0.317647, 0.592157, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Album" to="." method="_on_Album_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
